fix: Align search box properly in UI

--- a/src/components/pages/OrderForm.css
+++ b/src/components/pages/OrderForm.css
@@ -10,11 +10,13 @@
   flex-direction: column;
   align-items: center;
   border: 1px solid #ddd;
-  border-radius: 8px;
   padding: 16px;
   margin-bottom: 16px;
   width: 100%;
   max-width: 600px;
+  background-color: #f8f8f8;
+	border-radius: 10px;
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 
 .basic-info-card h3 {
@@ -43,11 +45,13 @@
   flex-direction: column;
   align-items: center;
   border: 1px solid #ddd;
-  border-radius: 8px;
   padding: 16px;
   margin-bottom: 16px;
   width: 100%;
   max-width: 600px;
+  background-color: #f8f8f8;
+	border-radius: 10px;
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 
 .scenario-box h3 {
@@ -70,11 +74,13 @@
   flex-direction: column;
   align-items: center;
   border: 1px solid #ddd;
-  border-radius: 8px;
   padding: 16px;
   margin-bottom: 16px;
   width: 100%;
   max-width: 600px;
+  background-color: #f8f8f8;
+	border-radius: 10px;
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 
 .image-upload img {
