--- a/src/components/pages/Register.css
+++ b/src/components/pages/Register.css
@@ -25,25 +25,26 @@
 	max-width: 400px;
   }
   
-  label {
+  .form-group label {
 	font-weight: bold;
 	margin-bottom: 0.5rem;
   }
   
-  input[type="text"],
-  input[type="email"],
-  input[type="password"],
-  input[type="tel"],
+  .form-group input[type="text"],
+  .form-group input[type="email"],
+  .form-group input[type="password"],
+  .form-group input[type="tel"],
   select {
-	padding: 0.5rem;
-	font-size: 1rem;
-	border-radius: 0.25rem;
-	border: 1px solid #ccc;
+	font-size: 1.2rem;
+	padding: 10px;
+	border-radius: 5px;
+	border: none;
+	background-color: #f2f2f2;
+	color: #333;
 	width: 100%;
-	margin-bottom: 0.5rem;
   }
   
-  select {
+  .form-group select {
 	appearance: none;
 	background-color: white;
 	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='5' viewBox='0 0 10 5'%3E%3Cpath fill='%23ccc' d='M5 5L0 0h10z'/%3E%3C/svg%3E");
@@ -52,8 +53,8 @@
 	padding-right: 1.5rem;
   }
   
-  button[type="submit"] {
-	background-color: #007bff;
+  .form-group button[type="submit"] {
+	background-color: #f7446e;
 	color: white;
 	padding: 0.5rem 1rem;
 	border-radius: 0.25rem;
@@ -64,8 +65,8 @@
 	max-width: 400px;
   }
   
-  button[type="submit"]:hover {
-	background-color: #0069d9;
+  .form-group button[type="submit"]:hover {
+	background-color: #f7446e;
   }
   
   .register {
@@ -80,13 +81,13 @@
   .register a {
 	font-size: 1rem;
 	font-weight: bold;
-	color: #007bff;
+	color: #f7446e;
 	text-decoration: none;
 	transition: color 0.3s ease-in-out;
   }
   
   .register a:hover {
-	color: #0069d9;
+	color: #f57e9a;
   }
   
   @media screen and (min-width: 768px) {
@@ -102,7 +103,7 @@
 	  max-width: none;
 	}
   
-	button[type="submit"] {
+	.form-group button[type="submit"] {
 	  max-width: none;
 	  width: auto;
 	}
