--- a/src/components/pages/Skill.module.css
+++ b/src/components/pages/Skill.module.css
@@ -1,10 +1,11 @@
-Skill.module.css
-
+/* Styling the page. */
 .container {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	margin: 2rem;
+	margin: 0 auto;
+	padding: 40px;
+	max-width: 600px;
+	background-color: #f8f8f8;
+	border-radius: 10px;
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   }
   
   .heading {
@@ -49,7 +50,7 @@ Skill.module.css
   
   .button {
 	padding: 0.5rem 1rem;
-	background-color: #0077cc;
+	background-color: #f1356d;
 	color: white;
 	border: none;
 	border-radius: 0.5rem;
@@ -58,7 +59,7 @@ Skill.module.css
   }
   
   .button:hover {
-	background-color: #005fa3;
+	background-color: #e26b8f;
   }
   
   .add {
